# FrequencyAnalysis

./: .gitignore  2021-08-10_DistributionFitting.ipynb  README.md  pyproject.toml
data/: 39001_thames.csv  39001_thames_missing.csv  info.txt
frequency_analysis/: data_io.py  logging.py  main.py  plotting.py
notebooks/: frequency_analysis.ipynb  gev_frequency_analysis.ipynb
